# s101-lua-speedup

./: CMakeLists.txt  S-101FC.xml
lib/: CMakeLists.txt
lib/tinyxml/: CMakeLists.txt
src/: CMakeLists.txt  GeneratedLists.cpp  GeneratedLists.h  IAttrContainer.h  ICatalogue.h  IObjectDrawer.h  LuaUtil.cpp  LuaUtil.h  Spatial.cpp  Spatial.h  TestObjectDrawer.cpp  TestObjectDrawer.h  XmlLoader.cpp  XmlLoader.h  main.cpp
src/ConvertedLuaPortrayal/: CMakeLists.txt  ConvertedLua.cpp  ConvertedLua.h  ConvertedLuaInterface.h
src/ConvertedLuaPortrayal/Lua/: AttrCodes.lua  AttributeLookup.lua  DrawFunctions.lua  DrawFunctionsById.lua  PortrayalMain.lua  S101Primitives.lua
src/InitialLuaPortrayal/: CMakeLists.txt  InitialLua.cpp  InitialLua.h  portrayal_catalogue.xml
src/InitialLuaPortrayal/Rules/: AnchorBerth.lua  AnchorageArea.lua  ArchipelagicSeaLaneAxis.lua  BeaconCardinal.lua  BeaconIsolatedDanger.lua  BeaconLateral.lua  BeaconSpecialPurposeGeneral.lua  Berth.lua  Bridge.lua  Building.lua  BuiltUpArea.lua  BuoyCardinal.lua  BuoyEmergencyWreckMarking.lua  BuoyIsolatedDanger.lua  CableSubmarine.lua  CargoTranshipmentArea.lua  CoastguardStation.lua  Coastline.lua  CollisionRegulationLimit.lua  ContinentalShelfArea.lua  Conveyor.lua  CurrentNonGravitational.lua  CustomZone.lua  DEPARE03.lua  DEPCNT03.lua  Daymark.lua  DeepWaterRoute.lua  DeepWaterRouteCenterline.lua  DepthContour.lua  DepthNoBottomFound.lua  DiscolouredWater.lua  DistanceMark.lua  DredgedArea.lua  ExclusiveEconomicZone.lua  Fairway.lua  FenceWall.lua  FerryRoute.lua  FishingFacility.lua  FishingGround.lua  FogSignal.lua  (+83 more)
src/OptimizedLuaPortrayal/: CMakeLists.txt  OptimizedLua.cpp  OptimizedLua.h  OptimizedLuaInterface.h
src/OptimizedLuaPortrayal/Rules/: AdministrationArea.lua  AirportAirfield.lua  AnchorBerth.lua  AnchorageArea.lua  ArchipelagicSeaLaneAxis.lua  BeaconCardinal.lua  BeaconIsolatedDanger.lua  BeaconLateral.lua  BeaconSafeWater.lua  BeaconSpecialPurposeGeneral.lua  Berth.lua  Bridge.lua  Building.lua  BuiltUpArea.lua  BuoyCardinal.lua  BuoyEmergencyWreckMarking.lua  BuoyInstallation.lua  BuoyIsolatedDanger.lua  BuoyLateral.lua  BuoySafeWater.lua  BuoySpecialPurposeGeneral.lua  CableArea.lua  CableOverhead.lua  CableSubmarine.lua  Canal.lua  CargoTranshipmentArea.lua  Causeway.lua  CautionArea.lua  Checkpoint.lua  CoastguardStation.lua  Coastline.lua  CollisionRegulationLimit.lua  ContiguousZone.lua  ContinentalShelfArea.lua  Conveyor.lua  Crane.lua  CurrentNonGravitational.lua  CustomZone.lua  DEPARE03.lua  DEPCNT03.lua  (+157 more)
src/OptimizedLuaPortrayal/SystemRules/: AttributeLookup.lua  ClassCodes.lua  Interface.lua  PortrayalAPI.lua  PortrayalModel.lua  S100Scripting.lua  loadall.lua  main.lua
src/S100RulesParser/: CMakeLists.txt  ChooseRule.h
src/S100RulesParser/private/: AttrCodes.h  ChooseRule.cpp  ClassCodes.h  GenRules.cpp  GenRules.h  S101Primitives.cpp  S101Primitives.h
